#307 Allow dynamic modes
Split Mode enum into interface and standard modes.